--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "ts-node index.ts",
     "start:dev": "tsnd index.ts",
     "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "Nieopodal",
   "license": "ISC",
@@ -21,8 +21,10 @@
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.4.0",
     "@types/node": "^18.14.0",
     "@types/uuid": "^9.0.0",
+    "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.5"
