--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "financials-back",
-  "version": "0.16.0",
+  "version": "0.17.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -12,16 +12,20 @@
   "author": "Nieopodal",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "date-fns": "^2.29.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.1.2",
     "sharp": "^0.31.3",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/cookie-session": "^2.0.44",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.4.0",
