--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "financials-back",
-  "version": "0.18.0",
+  "version": "0.19.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -25,10 +25,12 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/cookie-session": "^2.0.44",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.4.0",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/multer": "^1.4.7",
     "@types/node": "^18.14.0",
     "@types/sharp": "^0.31.1",
