--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "financials-back",
-  "version": "0.22.0",
+  "version": "0.23.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.1.2",
+    "nodemailer": "^6.9.1",
     "sharp": "^0.31.3",
     "uuid": "^9.0.0"
   },
@@ -33,6 +34,7 @@
     "@types/jsonwebtoken": "^9.0.1",
     "@types/multer": "^1.4.7",
     "@types/node": "^18.14.0",
+    "@types/nodemailer": "^6.4.7",
     "@types/sharp": "^0.31.1",
     "@types/uuid": "^9.0.0",
     "ts-jest": "^29.0.5",
