--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "financials-back",
-  "version": "0.25.0",
+  "version": "0.26.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -18,6 +18,8 @@
     "date-fns": "^2.29.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "express-rate-limit": "^6.7.0",
+    "helmet": "^6.0.1",
     "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.1.2",
