--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "ts-node index.ts",
     "start:dev": "tsnd index.ts",
-    "build": "tsc",
+    "build": "tsc --build",
     "test": "jest"
   },
   "author": "Nieopodal",
@@ -22,7 +22,7 @@
     "helmet": "^6.0.1",
     "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
-    "mysql2": "^3.1.2",
+    "mysql2": "^3.2.0",
     "nodemailer": "^6.9.1",
     "sharp": "^0.31.3",
     "uuid": "^9.0.0"
